--- a/saltstack-grains-json.ipynb
+++ b/saltstack-grains-json.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -13,7 +16,7 @@
     "tmp = pd.read_json(\"data/test.json\", orient='index')\n",
     "\n",
     "#https://docs.saltstack.com/en/latest/ref/cli/salt.html\n",
-    "#salt --static --out json '*' grains.item os osrelease oscodename fqdn ip4_interfaces ipv4 kernel\n",
+    "#salt --static --out json '*' grains.item os_family os osrelease oscodename fqdn ip4_interfaces ipv4 kernel\n",
     "grains = pd.read_json(tmp['ret'].to_json(), orient='index')\n",
     "\n",
     "#usable_dataframe = pd.io.json.json_normalize(jsondata)\n",
@@ -22,9 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -48,7 +54,7 @@
        "    <tr>\n",
        "      <th>saltmaster</th>\n",
        "      <td>saltmaster</td>\n",
-       "      <td>{'eth1': ['172.76.4.2'], 'lo': ['127.0.0.1'], ...</td>\n",
+       "      <td>{'lo': ['127.0.0.1'], 'eth1': ['172.76.4.2'], ...</td>\n",
        "      <td>[127.0.0.1, 172.17.0.2, 172.76.4.2]</td>\n",
        "      <td>Linux</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -58,7 +64,7 @@
        "    <tr>\n",
        "      <th>saltminion01</th>\n",
        "      <td>saltminion01</td>\n",
-       "      <td>{'eth0': ['172.76.4.3'], 'lo': ['127.0.0.1']}</td>\n",
+       "      <td>{'lo': ['127.0.0.1'], 'eth0': ['172.76.4.3']}</td>\n",
        "      <td>[127.0.0.1, 172.76.4.3]</td>\n",
        "      <td>Linux</td>\n",
        "      <td>Ubuntu</td>\n",
@@ -71,8 +77,8 @@
       ],
       "text/plain": [
        "                      fqdn                                     ip4_interfaces  \\\n",
-       "saltmaster      saltmaster  {'eth1': ['172.76.4.2'], 'lo': ['127.0.0.1'], ...   \n",
-       "saltminion01  saltminion01      {'eth0': ['172.76.4.3'], 'lo': ['127.0.0.1']}   \n",
+       "saltmaster      saltmaster  {'lo': ['127.0.0.1'], 'eth1': ['172.76.4.2'], ...   \n",
+       "saltminion01  saltminion01      {'lo': ['127.0.0.1'], 'eth0': ['172.76.4.3']}   \n",
        "\n",
        "                                             ipv4 kernel      os oscodename  \\\n",
        "saltmaster    [127.0.0.1, 172.17.0.2, 172.76.4.2]  Linux  Ubuntu     xenial   \n",
@@ -83,7 +89,7 @@
        "saltminion01      16.04  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,22 +99,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tests"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;36mlocal\u001b[0;0m:\r\n",
+      "    \u001b[0;1;33mTrue\u001b[0;0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sudo salt-call test.ping"
+   ]
   },
   {
    "cell_type": "code",
@@ -166,6 +189,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
