Refreshed grains data via json into a Jupyter notebook.

--- a/data/saltstack-grains-json.ipynb
+++ b/data/saltstack-grains-json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -13,10 +13,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "tmp = pd.read_json(\"data/test.json\", orient='index')\n",
+    "tmp = pd.read_json(\"/mnt/data/salt-grains.json\", orient='index')\n",
     "\n",
     "#https://docs.saltstack.com/en/latest/ref/cli/salt.html\n",
-    "#salt --static --out json '*' grains.item os_family os osrelease oscodename fqdn ip4_interfaces ipv4 kernel\n",
+    "#salt --static --out json '*' grains.item id os_family os osrelease oscodename osfinger ip4_interfaces kernel > /mnt/data/salt-grains.json \n",
     "grains = pd.read_json(tmp['ret'].to_json(), orient='index')\n",
     "\n",
     "#usable_dataframe = pd.io.json.json_normalize(jsondata)\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -41,55 +41,72 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>fqdn</th>\n",
+       "      <th>id</th>\n",
        "      <th>ip4_interfaces</th>\n",
-       "      <th>ipv4</th>\n",
        "      <th>kernel</th>\n",
        "      <th>os</th>\n",
+       "      <th>os_family</th>\n",
        "      <th>oscodename</th>\n",
+       "      <th>osfinger</th>\n",
        "      <th>osrelease</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>saltmaster</th>\n",
-       "      <td>saltmaster</td>\n",
-       "      <td>{'lo': ['127.0.0.1'], 'eth1': ['172.76.4.2'], ...</td>\n",
-       "      <td>[127.0.0.1, 172.17.0.2, 172.76.4.2]</td>\n",
+       "      <th>minion-on-saltmaster</th>\n",
+       "      <td>minion-on-saltmaster</td>\n",
+       "      <td>{'eth0': ['172.76.4.2'], 'lo': ['127.0.0.1']}</td>\n",
        "      <td>Linux</td>\n",
        "      <td>Ubuntu</td>\n",
+       "      <td>Debian</td>\n",
        "      <td>xenial</td>\n",
+       "      <td>Ubuntu-16.04</td>\n",
        "      <td>16.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>saltminion01</th>\n",
        "      <td>saltminion01</td>\n",
-       "      <td>{'lo': ['127.0.0.1'], 'eth0': ['172.76.4.3']}</td>\n",
-       "      <td>[127.0.0.1, 172.76.4.3]</td>\n",
+       "      <td>{'eth0': ['172.76.4.3'], 'lo': ['127.0.0.1']}</td>\n",
        "      <td>Linux</td>\n",
        "      <td>Ubuntu</td>\n",
+       "      <td>Debian</td>\n",
        "      <td>xenial</td>\n",
+       "      <td>Ubuntu-16.04</td>\n",
        "      <td>16.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>saltminion02</th>\n",
+       "      <td>saltminion02</td>\n",
+       "      <td>{'eth0': ['172.76.4.4'], 'lo': ['127.0.0.1']}</td>\n",
+       "      <td>Linux</td>\n",
+       "      <td>Debian</td>\n",
+       "      <td>Debian</td>\n",
+       "      <td>jessie</td>\n",
+       "      <td>Debian-8</td>\n",
+       "      <td>8.60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      fqdn                                     ip4_interfaces  \\\n",
-       "saltmaster      saltmaster  {'lo': ['127.0.0.1'], 'eth1': ['172.76.4.2'], ...   \n",
-       "saltminion01  saltminion01      {'lo': ['127.0.0.1'], 'eth0': ['172.76.4.3']}   \n",
+       "                                        id  \\\n",
+       "minion-on-saltmaster  minion-on-saltmaster   \n",
+       "saltminion01                  saltminion01   \n",
+       "saltminion02                  saltminion02   \n",
        "\n",
-       "                                             ipv4 kernel      os oscodename  \\\n",
-       "saltmaster    [127.0.0.1, 172.17.0.2, 172.76.4.2]  Linux  Ubuntu     xenial   \n",
-       "saltminion01              [127.0.0.1, 172.76.4.3]  Linux  Ubuntu     xenial   \n",
+       "                                                     ip4_interfaces kernel  \\\n",
+       "minion-on-saltmaster  {'eth0': ['172.76.4.2'], 'lo': ['127.0.0.1']}  Linux   \n",
+       "saltminion01          {'eth0': ['172.76.4.3'], 'lo': ['127.0.0.1']}  Linux   \n",
+       "saltminion02          {'eth0': ['172.76.4.4'], 'lo': ['127.0.0.1']}  Linux   \n",
        "\n",
-       "              osrelease  \n",
-       "saltmaster        16.04  \n",
-       "saltminion01      16.04  "
+       "                          os os_family oscodename      osfinger  osrelease  \n",
+       "minion-on-saltmaster  Ubuntu    Debian     xenial  Ubuntu-16.04      16.04  \n",
+       "saltminion01          Ubuntu    Debian     xenial  Ubuntu-16.04      16.04  \n",
+       "saltminion02          Debian    Debian     jessie      Debian-8       8.60  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -124,8 +141,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;36mlocal\u001b[0;0m:\r\n",
-      "    \u001b[0;1;33mTrue\u001b[0;0m\r\n"
+      "[WARNING ] Although 'systemd-detect-virt' was found in path, the current user cannot execute it. Grains output might not be accurate.\n",
+      "\u001b[0;36mlocal\u001b[0;0m:\n",
+      "    \u001b[0;1;33mTrue\u001b[0;0m\n"
      ]
     }
    ],
@@ -189,7 +207,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
